# Qt-URO

./: .gitignore  CMakeLists.txt  README.md
Assets/Sql/: create.sql  emails.db
Assets/Styles/: styles.css
Header/: MainWindow.h  Menubar.h  QComponent.h  SideBar.h  StatusBar.h  ViewPanel.h
Header/Core/: Config.h  Core.h  DIContainer.h  IService.h  QtWidgets.h  StdLib.h  Utility.h
Header/Database/: AttachmentRepo.cpp  DataModels.h  DbContext.cpp  DbContext.h  EmailRepo.h  FormInserter.h  UserRepo.h
Header/Dialog/: AttachmentViewerDialog.h
Header/Event/: EventBus.h
Header/Utility/: AttachmentViewerDialog.h  CreateKeyValueRow.h
Header/Views/: ComposeView.h  ContactsView.h  EmailView.h
Header/Views/ComposeView/: AttachmentSideBar.h  AttachmentSidebarCard.cpp  AttachmentSidebarCard.h  EmailEditor.h  EmailEditorBody.h  EmailEditorHeader.h  EmailEditorToolbar.h
Header/Views/ContactsView/: ContactCard.h
Header/Views/EmailPreview/: EmailPreviewAttachmentCard.cpp  EmailPreviewAttachmentCard.h  EmailPreviewAttachments.h  EmailPreviewBody.h  EmailPreviewContent.h  EmailPreviewHeader.h  EmailPreviewToolbar.h
Header/Views/EmailView/: BaseView.h  CategoryList.h  EmailList.h  EmailListFilterFrame.h  EmailListSearchBar.h  EmailListSortFrame.h  EmailPreview.h
Header/Views/EmailView/EmailCardList/: EmailCard.h  EmailCardList.h
Header/Views/EmailView/EmailListViews/: AllMailListView.h  BinListView.h  DraftsListView.h  EmailListView.cpp  EmailListView.h  InboxListView.cpp  InboxListView.h  SentMailListView.h
Source/: AllMailListView.cpp  AttachmentRepo.cpp  AttachmentSideBar.cpp  AttachmentViewerDialog.cpp  BaseView.cpp  BinListView.cpp  CategoryList.cpp  ComposeView.cpp  ContactCard.cpp  ContactsView.cpp  DbContext.cpp  DraftsListView.cpp  EmailCard.cpp  EmailCardList.cpp  EmailEditor.cpp  EmailEditorBody.cpp  EmailEditorHeader.cpp  EmailEditorToolbar.cpp  EmailList.cpp  EmailListFilterFrame.cpp  EmailListSearchBar.cpp  EmailListSortFrame.cpp  EmailPreview.cpp  EmailPreviewAttachments.cpp  EmailPreviewBody.cpp  EmailPreviewContent.cpp  EmailPreviewHeader.cpp  EmailPreviewToolbar.cpp  EmailRepo.cpp  EmailView.cpp  FormInserter.cpp  InboxListView.cpp  MainWindow.cpp  Menubar.cpp  QComponent.cpp  SentMailListView.cpp  SideBar.cpp  StatusBar.cpp  UserRepo.cpp  ViewPanel.cpp  (+1 more)
